@@ -1,4 +1,5 @@
 * Version 0.6.2 (???)
+- Implemented userdir support
 - Fixed problem with PATH_INFO and PHP scripts
 
 * Version 0.6.1 (26 November 2005)
